--- a/starters-guide-go/index.html
+++ b/starters-guide-go/index.html
@@ -19,7 +19,7 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>A Starter's Guide To Structuring Go Projects</h1>
+					<h1>A Starter's Guide To Go Projects</h1>
           <h3>(Almost a Hitchhiker Guide)</h3>
 					<p>
 						by Artur Kondas
