--- a/starters-guide-go/index.html
+++ b/starters-guide-go/index.html
@@ -22,33 +22,20 @@
 					<h1>A Starter's Guide To Go Projects</h1>
           <h3>(Almost a Hitchhiker Guide)</h3>
 					<p>
-						by Artur Kondas
+            by <a href="github.com/youshy">Artur Kondas</a>
 					</p>
 				</section>
 
-				<!-- Example of nested vertical slides -->
-				<section>
-					<section>
-						<h2>Vertical Slides</h2>
-						<p>Slides can be nested inside of each other.</p>
-						<p>Use the <em>Space</em> key to navigate through all slides.</p>
-						<br>
-						<a href="#" class="navigate-down">
-							<img class="r-frame" style="background: rgba(255,255,255,0.1);" width="178" height="238" data-src="https://static.slid.es/reveal/arrow.png" alt="Down arrow">
-						</a>
-					</section>
-					<section>
-						<h2>Basement Level 1</h2>
-						<p>Nested slides are useful for adding additional detail underneath a high level horizontal slide.</p>
-					</section>
-					<section>
-						<h2>Basement Level 2</h2>
-						<p>That's it, time to go back up.</p>
-						<br>
-						<a href="#/2">
-							<img class="r-frame" style="background: rgba(255,255,255,0.1); transform: rotate(180deg);" width="178" height="238" data-src="https://static.slid.es/reveal/arrow.png" alt="Up arrow">
-						</a>
-					</section>
+				<section id="fragments">
+          <h2>Table of contents</h2>
+          <ul>
+            <li class="fragment">Why should I even care?</li>
+            <li class="fragment">How big players do it?</li>
+            <li class="fragment">How I can do it?</li>
+            <li class="fragment">Caveats</li>
+            <li class="fragment">How you do it?</li>
+            <li class="fragment">Where can I learn more?</li>
+          </ul>
 				</section>
 
 				<section>
