--- a/starters-guide-go/index.html
+++ b/starters-guide-go/index.html
@@ -45,9 +45,9 @@
         <section id="fragments">
           <h3>Chances are you've said some of these things before:</h3>
           <ul>
-            <li class="fragment">I don't want to do anything specific with ths package</li>
-            <li class="fragment">I just want to test some things</li>
-            <li class="fragment">I don't care about it, because it's a private repo</li>
+            <li class="fragment">I don't want to do anything specific with this package...</li>
+            <li class="fragment">I just want to test some things...</li>
+            <li class="fragment">I don't care about it, because it's a private repo...</li>
           </ul>
         </section>
 
