--- a/starters-guide-go/index.html
+++ b/starters-guide-go/index.html
@@ -91,7 +91,7 @@
 				</section>
 
         <section>
-          <h3>1. Flat Structure<\h3>
+          <h3>1. Flat Structure</h3>
           <section>
             <p>Best for</p>
             <li>
