add background images

--- a/starters-guide-go/index.html
+++ b/starters-guide-go/index.html
@@ -20,7 +20,6 @@
 			<div class="slides">
 				<section>
 					<h1>A Starter's Guide To Go Projects</h1>
-          <h3>(Almost a Hitchhiker Guide)</h3>
 					<p>
             by <a href="github.com/youshy">Artur Kondas</a>
 					</p>
@@ -55,22 +54,19 @@
           <p class="fragment">Before we answer all the burning questions, let's check how big players structure their code</p>
         </section>
 
-        <!--TODO: Change to background image -->
-        <section data-background-iframe="https://github.com/golang-standards/project-layout" data-background-interactive>
+        <section data-background-image="./assets/image/project-standard.png">
           <div style="position: absolute; width: 40%; right: 0; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
             <h2>Project Layout by Golang Standards</h2>
             <p>Most probably if you start Googling the topic, you'll find this repo first. This is the most popular way of structuring the content in Go projects.</p>
           </div>
         </section>
 
-        <!--TODO: Change to background image -->
-        <section data-background-iframe="https://github.com/kubernetes/kubernetes" data-background-interactive>
+        <section data-background-image="./assets/image/project-standard.png">
           <div style="position: absolute; width: 40%; right: 0; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
             <h2>Kubernetes</h2>
           </div>
         </section>
 
-        <!--TODO: Change to background image -->
         <section data-background-iframe="https://github.com/hashicorp/terraform" data-background-interactive>
           <div style="position: absolute; width: 40%; right: 0; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
             <h2>Terraform</h2>
