--- a/starters-guide-go/index.html
+++ b/starters-guide-go/index.html
@@ -54,20 +54,20 @@
           <p class="fragment">Before we answer all the burning questions, let's check how big players structure their code</p>
         </section>
 
-        <section data-background-image="./assets/image/project-standard.png">
+        <section data-background-image="assets/images/project-standards.png">
           <div style="position: absolute; width: 40%; right: 0; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
             <h2>Project Layout by Golang Standards</h2>
             <p>Most probably if you start Googling the topic, you'll find this repo first. This is the most popular way of structuring the content in Go projects.</p>
           </div>
         </section>
 
-        <section data-background-image="./assets/image/project-standard.png">
+        <section data-background-image="assets/images/kubernetes.png">
           <div style="position: absolute; width: 40%; right: 0; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
             <h2>Kubernetes</h2>
           </div>
         </section>
 
-        <section data-background-iframe="https://github.com/hashicorp/terraform" data-background-interactive>
+        <section data-background-image="assets/images/terraform.png">
           <div style="position: absolute; width: 40%; right: 0; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
             <h2>Terraform</h2>
             <p>Can you see any pattern?</p>
