--- a/starters-guide-go/index.html
+++ b/starters-guide-go/index.html
@@ -395,7 +395,7 @@ func (a *App) UserGet() http.Handler {
           <h2 style="text-align:left">About Me</h2>
           <div style="display:flex;flex-flow:row;justify-content:space-evenly">
             <div>
-              <p>Go Engineer in <a href="https://ecs.co.uk/" target="_blank">ECS Digital</a></p>
+              <p>Go Engineer @ <a href="https://ecs.co.uk/" target="_blank">ECS Digital</a></p>
               <p style="text-align:left">Find Me:</p>
               <ul>
                 <li><a href="https://twitter.com/arturkondas" target="_blank">Twitter - @arturkondas</a></li>
